--- a/pom.xml
+++ b/pom.xml
@@ -102,14 +102,14 @@
     <gson.version>2.2.4</gson.version>
     <guava.version>13.0.1</guava.version>
     <guice.version>3.0</guice.version>
-    <hadoop.version>2.3.0</hadoop.version>
+    <hadoop.version>2.6.0-cdh5.7.0</hadoop.version>
     <hbase96.version>0.96.2-hadoop2</hbase96.version>
     <hbase98.version>0.98.6.1-hadoop2</hbase98.version>
     <hbase10cdh.version>1.0.0-cdh5.4.4</hbase10cdh.version>
     <hbase10cdh550.version>1.0.0-cdh5.5.0</hbase10cdh550.version>
     <hbase10.version>1.0.1.1</hbase10.version>
-    <hbase11.version>1.2.0</hbase11.version>
-    <hive.version>1.1.0</hive.version>
+    <hbase11.version>1.2.0-cdh5.7.0</hbase11.version>
+    <hive.version>1.1.0-cdh5.7.0</hive.version>
     <hsql.version>2.2.4</hsql.version>
     <http.component.version>4.2.5</http.component.version>
     <jetty.version>6.1.22</jetty.version>
