CDAP-6375 refactor hydrator spark
Pulling Spark related Hydrator logic into its own module in
preparation for the new artifact that will run pipelines using
Spark Streaming.

As part of this refactor, a single Spark program can now be used
to run an entire pipeline, which removes the need for running the
planner logic and local connector datasets used by the mapreduce
engine.

--- a/cdap-app-templates/cdap-etl/cdap-etl-batch/pom.xml
+++ b/cdap-app-templates/cdap-etl/cdap-etl-batch/pom.xml
@@ -62,6 +62,11 @@
       <version>${project.version}</version>
     </dependency>
     <dependency>
+      <groupId>co.cask.cdap</groupId>
+      <artifactId>hydrator-spark-core</artifactId>
+      <version>${project.version}</version>
+    </dependency>
+    <dependency>
       <groupId>org.apache.hadoop</groupId>
       <artifactId>hadoop-mapreduce-client-core</artifactId>
       <scope>provided</scope>
