--- a/pom.xml
+++ b/pom.xml
@@ -2471,6 +2471,7 @@
         <module>cdap-test</module>
         <module>cdap-integration-test</module>
         <module>cdap-ui</module>
+        <module>cdap-kms</module>
       </modules>
     </profile>
     <profile>
