--- a/cdap-app-fabric/pom.xml
+++ b/cdap-app-fabric/pom.xml
@@ -213,6 +213,11 @@
         </exclusion>
       </exclusions>
     </dependency>
+    <dependency>
+      <groupId>co.cask.cdap</groupId>
+      <artifactId>cdap-kms</artifactId>
+      <version>3.5.0-SNAPSHOT</version>
+    </dependency>
   </dependencies>
 
   <build>
