--- a/cdap-security/pom.xml
+++ b/cdap-security/pom.xml
@@ -24,7 +24,7 @@
   <parent>
     <groupId>co.cask.cdap</groupId>
     <artifactId>cdap</artifactId>
-    <version>3.3.5</version>
+    <version>3.3.6-SNAPSHOT</version>
   </parent>
 
   <artifactId>cdap-security</artifactId>
